# ml_interpret

./: pyproject.toml
data/: boston.pkl
models/: grouped_permutation_feature_importance.py  individual_conditional_expection.py  partial_dependence.py  permutation_feature_importance.py  shapley_additive_explanations.py
utils/: data_generator.py  plot.py
