[tool.poetry]
name = "techs-interpret-ml"
version = "0.1.0"
description = ""
authors = ["ibukikaburagi <63328418+1buk109@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "techs_interpret_ml"}]

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.24.2"
pandas = "^2.0.0"
plotly = "^5.14.1"
nbformat = "^5.8.0"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
